composer project name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "spartaksun/sitemap-generator-php",
+  "name": "spartaksun/sitemap-php",
   "type": "package",
   "license" : "GPL",
   "stability": "dev",
