--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
   "minimum-stability": "stable",
   "require": {
     "php": ">=5.4.0",
-    "guzzlehttp/guzzle": "5.0.*@dev"
+    "guzzlehttp/guzzle": "5.0.0",
+    "evert/sitemap-php": "1.0.0"
   },
   "autoload": {
     "psr-4": {
