--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "require": {
     "php": ">=5.4.0",
     "guzzlehttp/guzzle": "5.0.0",
-    "evert/sitemap-php": "1.0.0"
+    "thepixeldeveloper/sitemap": "3.0.0"
   },
   "autoload": {
     "psr-4": {
